2003-10-18	blytkerchan
	* compare_and_exchange.c: new file
